# fluffy-funicular

./: .flake8  .gitignore  README.md  benchmark.py  generate_data.py  pyproject.toml  requirements.txt
multi_threaded/: multiprocess_pool.py  thread_pool.py
single_threaded/: basic_readline.py  buffered_read.py  chunked_readlines.py
